Java 8 support progress