@@ -7,6 +7,7 @@ import org.bukkit.command.TabCompleter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 
 public class TabComplete implements TabCompleter {
@@ -14,6 +15,6 @@ public class TabComplete implements TabCompleter {
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String label, @NotNull String[] args) {
-        return sender.hasPermission("axrankmenu.reload") ? List.of("reload") : null;
+        return sender.hasPermission("axrankmenu.reload") ? Collections.singletonList("reload") : null;
     }
 }
